# residual-stream-biject-e825-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/: 2304.07735_permutation_equivariance_transformers_manifest.txt  2305.16349_lexinvariant_language_models_manifest.txt  2502.12131_transformer_dynamics_manifest.txt  2509.24125_impossibility_inverse_permutation_manifest.txt
results/: metrics.json  supplementary_metrics.json
src/: experiment.py  supplementary_analysis.py
